--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -14,19 +14,19 @@ WORKDIR /app
 COPY ./package.json ./package-lock.json ./tsconfig.json ./tsconfig.production.json ./.npmignore ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm ci && npm run build && npm install --omit=dev && npm link && npm shrinkwrap && npm pack 
+RUN npm ci && npm run build && npm link
 
 WORKDIR /matterbridge-test
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-test.git .
-RUN npm ci && npm link matterbridge && npm run build && npm pkg delete devDependencies scripts types && npm prune --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm pkg delete devDependencies scripts types && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-example-accessory-platform
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-example-accessory-platform.git .
-RUN npm ci && npm link matterbridge && npm run build && npm pkg delete devDependencies scripts types && npm prune --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm pkg delete devDependencies scripts types && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-example-dynamic-platform
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-example-dynamic-platform.git .
-RUN npm ci && npm link matterbridge && npm run build && npm pkg delete devDependencies scripts types && npm prune --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm pkg delete devDependencies scripts types && npm install --omit=dev && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-zigbee2mqtt
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-zigbee2mqtt.git .
@@ -64,6 +64,8 @@ WORKDIR /matterbridge-eve-weather
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-weather.git .
 RUN npm ci && npm link matterbridge && npm run build && npm pkg delete devDependencies scripts types && npm install --omit=dev && npm shrinkwrap && npm pack
 
+WORKDIR /app
+RUN npm run cleanBuildProduction && npm pkg delete devDependencies scripts types && npm install --omit=dev && npm shrinkwrap && npm pack 
 
 
 FROM node:22-bookworm-slim AS release
