--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "2.1.0-dev.12",
+  "version": "2.1.0",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -161,7 +161,7 @@
     "@types/eslint__js": "8.42.3",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
-    "@types/node": "22.12.0",
+    "@types/node": "22.13.0",
     "@types/ws": "8.5.14",
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
