--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "2.1.2",
+  "version": "2.1.3-dev.1",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -162,7 +162,7 @@
     "@types/eslint__js": "8.42.3",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
-    "@types/node": "22.13.0",
+    "@types/node": "22.13.1",
     "@types/ws": "8.5.14",
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
@@ -172,6 +172,6 @@
     "prettier": "3.4.2",
     "ts-jest": "29.2.5",
     "typescript": "5.7.3",
-    "typescript-eslint": "8.22.0"
+    "typescript-eslint": "8.23.0"
   }
 }
