--- a/docker/Dockerfile.main
+++ b/docker/Dockerfile.main
@@ -41,5 +41,9 @@ RUN npm install -g --omit=dev matterbridge-eve-energy
 RUN npm install -g --omit=dev matterbridge-eve-room
 RUN npm install -g --omit=dev matterbridge-eve-weather
 
+# Add Docker HEALTHCHECK
+HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=5 \
+  CMD curl --fail http://localhost:8283/health || exit 1
+  
 WORKDIR /app
 CMD ["matterbridge", "-docker"]
