--- a/docker/Dockerfile.latest
+++ b/docker/Dockerfile.latest
@@ -15,5 +15,10 @@ RUN npm install -g npm@latest && \
     node -v && \
     npm -v && \
     npm list -g
+
+# Add Docker HEALTHCHECK
+HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=5 \
+  CMD curl --fail http://localhost:8283/health || exit 1
+
 CMD ["matterbridge", "-docker"]
 
