--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "test:endpoint": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgeEndpoint.test.ts",
     "test:endpoint-default": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgeEndpoint-default.test.ts",
     "test:endpoint-matterjs": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgeEndpoint-matterjs.test.ts",
-    "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
+    "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
     "test:pluginManager": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage pluginManager.test.ts",
     "test:deviceManager": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage deviceManager.test.ts",
     "test:utils": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage utils.test.ts",
