--- a/package.json
+++ b/package.json
@@ -109,18 +109,18 @@
     "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
     "test:watch": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.test.ts",
-    "test:bridgemode": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.bridge.test.ts",
-    "test:childbridgemode": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.childbridge.test.ts",
-    "test:endpoint": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgeEndpoint.test.ts",
-    "test:endpoint-default": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgeEndpoint-default.test.ts",
-    "test:endpoint-matterjs": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgeEndpoint-matterjs.test.ts",
-    "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
-    "test:pluginManager": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage pluginManager.test.ts",
-    "test:deviceManager": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage deviceManager.test.ts",
-    "test:utils": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage utils.test.ts",
-    "test:colorUtils": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage colorUtils.test.ts",
-    "test:frontend": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage frontend.test.ts",
+    "test:matterbridge": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.test.ts",
+    "test:bridgemode": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.bridge.test.ts",
+    "test:childbridgemode": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.childbridge.test.ts",
+    "test:endpoint": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgeEndpoint.test.ts",
+    "test:endpoint-default": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgeEndpoint-default.test.ts",
+    "test:endpoint-matterjs": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgeEndpoint-matterjs.test.ts",
+    "test:platform": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
+    "test:pluginManager": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage pluginManager.test.ts",
+    "test:deviceManager": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage deviceManager.test.ts",
+    "test:utils": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage utils.test.ts",
+    "test:colorUtils": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage colorUtils.test.ts",
+    "test:frontend": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage frontend.test.ts",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
