--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
     "test:watch": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:cli": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage cli.test.ts",
     "test:matterbridge": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.test.ts",
     "test:bridgemode": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.bridge.test.ts",
     "test:childbridgemode": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage matterbridge.childbridge.test.ts",
@@ -163,14 +164,14 @@
     "@types/eslint__js": "8.42.3",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
-    "@types/node": "22.13.1",
+    "@types/node": "22.13.4",
     "@types/ws": "8.5.14",
     "eslint": "9.20.1",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-jest": "28.11.0",
     "eslint-plugin-prettier": "5.2.3",
     "jest": "29.7.0",
-    "prettier": "3.5.0",
+    "prettier": "3.5.1",
     "ts-jest": "29.2.5",
     "typescript": "5.7.3",
     "typescript-eslint": "8.24.0"
