--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,5 @@ test
 eveHistory.test.ts
 eveHistoryBehavior.ts
 eveHistoryCluster.ts
-heap-sampling-profile.heapsnapshot
+*.heapsnapshot
+*.heapprofile
