--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "eslint": "9.20.1",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-jest": "28.11.0",
+    "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-prettier": "5.2.3",
     "jest": "29.7.0",
     "prettier": "3.5.1",
