--- a/package.json
+++ b/package.json
@@ -171,6 +171,8 @@
     "eslint-plugin-jest": "28.11.0",
     "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-prettier": "5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "jest": "29.7.0",
     "prettier": "3.5.1",
     "ts-jest": "29.2.5",
