Ignore documentation changes on workflow action (#229)
* Ignore documentation changes

* Ignore documentation changes

* Ignore documentation changes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,14 @@
 name: Install, Lint, Test and Build
 
-on: [push, pull_request]
+on:
+  push:
+    paths-ignore:
+      - '/screenshot/*'
+      - '/*.md'
+  pull_request:
+    paths-ignore:
+      - '/screenshot/*'
+      - '/*.md'
 
 jobs:
   build:
