--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "2.2.0-dev.2",
+  "version": "2.2.0-dev.8",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -149,7 +149,7 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest && npm run test"
   },
   "dependencies": {
-    "@matter/main": "0.12.4-alpha.0-20250224-46934b522",
+    "@matter/main": "0.12.4",
     "archiver": "7.0.1",
     "express": "4.21.2",
     "glob": "11.0.1",
