--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "2.2.0-dev.9",
+  "version": "2.2.0",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -167,10 +167,10 @@
     "@types/ws": "8.5.14",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-jest": "28.11.0",
-    "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-n": "17.15.1",
     "eslint-plugin-prettier": "5.2.3",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.1.0",
     "jest": "29.7.0",
     "prettier": "3.5.2",
     "ts-jest": "29.2.6",
