--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "2.5.3",
+  "version": "2.6.0",
   "private": true,
   "homepage": "./",
   "scripts": {
@@ -68,7 +68,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.0",
+    "react-router": "^7.3.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
