--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "updateDependencies": "npx npm-check-updates -u && npm install & npm run cleanBuild",
     "install:react": "npm install react react-dom react-router-dom react-scripts react-table",
     "install:emotion": "npm install @emotion/react @emotion/styled",
-    "install:muimaterial": "npm install @mui/material @mui/icons-material",
+    "install:muimaterial": "npm install @mui/material@latest @mui/icons-material@latest",
     "install:mdi": "npm install @mdi/js @mdi/react",
     "install:roboto": "npm install @fontsource/roboto",
     "install:qrcode": "npm install qrcode.react",
@@ -56,8 +56,8 @@
     "@fontsource/roboto": "^5.2.5",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@mui/icons-material": "^5.16.14",
-    "@mui/material": "^5.16.14",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "@rjsf/core": "^5.24.8",
     "@rjsf/utils": "^5.24.8",
     "@rjsf/validator-ajv8": "^5.24.8",
